# hatch-global-env-vars

./: .pre-commit-config.yaml  HISTORY.md  LICENSE.txt  README.md  hatch.toml  pyproject.toml  ruff.toml
.github/workflows/: build.yml  test.yml
hatch_global_env_vars/: hooks.py  plugin.py
tests/: utils.py
tests/e2e/: __init__.py  helpers.py  test_basic_functionality.py  test_complex_scenarios.py  test_conditions.py  test_recursive_resolution.py
tests/unit/: __init__.py  test_condition_evaluation.py  test_condition_evaluation_errors.py  test_env_var_config.py  test_global_env_vars_collector.py  test_value_resolution.py  test_var_reference.py
